# LedCube-client

./: CMakeLists.txt  hidtool.c
